--- a/404.html
+++ b/404.html
@@ -4,22 +4,38 @@ layout: default
 ---
 
 <style type="text/css" media="screen">
+
+  body {
+    background-color: black;
+    color: gray;
+  }
+
   .container {
     margin: 10px auto;
     max-width: 600px;
     text-align: center;
   }
+
   h1 {
     margin: 30px 0;
     font-size: 4em;
     line-height: 1;
     letter-spacing: -1px;
   }
+
+  a {
+    color: orange;
+  }
+
+  a:hover {
+    text-decoration: none;
+    font-weight: bold;
+  }
+
 </style>
 
 <div class="container">
   <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>página não encontrada</strong></p>
+  <p><a href="/">Voltar</a></p>
 </div>
