atualiza página de erro 404
Altera cor do fundo, fonte do corpo e fonte de link.

--- a/404.html
+++ b/404.html
@@ -6,8 +6,8 @@ layout: default
 <style type="text/css" media="screen">
 
   body {
-    background-color: black;
-    color: gray;
+    background-color: #2E2A24;
+    color: lightgray;
   }
 
   .container {
@@ -24,18 +24,17 @@ layout: default
   }
 
   a {
-    color: orange;
+    color: #AA852D;
   }
 
   a:hover {
     text-decoration: none;
-    font-weight: bold;
   }
 
 </style>
 
 <div class="container">
   <h1>404</h1>
-  <p><strong>página não encontrada</strong></p>
+  <p>página não encontrada</p>
   <p><a href="/">Voltar</a></p>
 </div>
