--- a/tags.html
+++ b/tags.html
@@ -8,7 +8,7 @@ title: tags
 <ul>
 	{% for tag in site.tags %}
 	<li>
-		<h2><a href="{{ tag.url }}">{{ tag.name }}</a> #{{ tag.short_name }}</h2>
+		<h2><a href="{{ tag.url }}">{{ tag.title }}</a> #{{ tag.short_name }}</h2>
 		<p>{{ tag.desc | markdownify }}</p>
 	</li>
 	{% endfor %}
