Reescreve página principal

--- a/index.html
+++ b/index.html
@@ -4,30 +4,96 @@
 <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://tantek.com/log/2004/undohtml.css" type="text/css">
     <link rel="stylesheet" href="assets/css/estilo.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" defer></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/fira-code.min.css"> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/jetbrains-mono.min.css"> 
     <script type="text/javascript" src="assets/js/menu.js" defer></script>
     <title>jultty</title>
 </head>
 <body>
-    <div class="col">
-        <h1 id="2022-04-23">Um post</h1>
-        <p class="data"><a href="#2022-04-23">23 de abril de 2022</a></p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. </p>
-        <p>Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. </p>
-        <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam. Etiam ultrices. Suspendisse in justo eu magna luctus suscipit. </p>
-        <p>Sed lectus. Integer euismod lacus luctus magna. Quisque cursus, metus vitae pharetra auctor, sem massa mattis sem, at interdum magna augue eget diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie dui. Praesent blandit dolor. Sed non quam. In vel mi sit amet augue congue elementum. Morbi in ipsum sit amet pede facilisis laoreet. Donec lacus nunc, viverra nec, blandit vel, egestas et, augue. Vestibulum tincidunt malesuada tellus. Ut ultrices ultrices enim. Curabitur sit amet mauris. Morbi in dui quis est pulvinar ullamcorper. Nulla facilisi. </p>
-        <p>Integer lacinia sollicitudin massa. Cras metus. Sed aliquet risus a tortor. Integer id quam. Morbi mi. Quisque nisl felis, venenatis tristique, dignissim in, ultrices sit amet, augue. Proin sodales libero eget ante. Nulla quam. Aenean laoreet. Vestibulum nisi lectus, commodo ac, facilisis ac, ultricies eu, pede. Ut orci risus, accumsan porttitor, cursus quis, aliquet eget, justo. Sed pretium blandit orci. Ut eu diam at pede suscipit sodales. </p>
-    </div>
+
+    <main class="col">
+        <h1 id="2022-04-23">> Juno Takano</h1>
+        <p class="tagline">Estudante de análise e desenvolvimento de sistemas</p>
+
+        <h2>Áreas de interesse</h2>
+        <ul class="lista">
+            <li>Desenvolvimento back-end</li>
+            <li>Localização e documentação de software</li>
+            <li>Suporte técnico bilíngue</li>
+        </ul>
+
+        <h2>Formação</h2>
+        <ul class="lista">
+            <li><strong>Graduação:</strong> Tecnologia em Sistemas para Internet
+                <ul class="lista">
+                    <li>Em andamento, 2022 &rightarrow; 2024 &nbsp; <a href="https://bri.ifsp.edu.br/index.php/cursos-superiores/tecnologia-em-sistemas-para-internet">IFSP Birigui</a></li>
+                </ul>
+            </li>
+        </ul>
+        <br/>
+        <ul class="lista">
+            <li><strong>2021</strong> &mdash; Alura, <a href="https://cursos.alura.com.br/user/juffff/fullCertificate/182f3f848779757ab880eb235a624162">Formação Iniciante em Programação</a></li>
+            <li><strong>2021</strong> &mdash; DIO, <a href="https://www.dio.me/certificate/D3331470/share">Bootcamp Amdocs JAVA Developer</a>
+            <li><strong>2022</strong> &mdash; DIO, <a href="https://www.dio.me/certificate/79EA21CB/share">Bootcamp Avanade Decola Tech 3&ordf; Edição</a>
+        </ul>
+
+        <h2>Experiência profissional</h2>
+        <ul class="lista">
+            <li><strong>2012 &mdash; 2012</strong> Nossa Saúde Planos de Saúde
+                <ul>
+                    <li><strong>Digitadora:</strong> Inserção e validação de dados</li>
+                </ul>
+            </li>
+            <br>
+            <li><strong>2014 &mdash; 2017</strong> Cultural Norte Americano
+                <ul>
+                    <li><strong>Professora de Inglês:</strong> Preparação e aplicação de aulas, exames e outras atividades pedagógicas</li>
+                </ul>
+            </li>
+            <br>
+            <li><strong>2019 &mdash; presente</strong> NEWEN Linguagens & Tecnologia 
+                <ul>
+                    <li><strong>Tradutora:</strong> Tradução, transcrição e legendagem</li>
+                </ul>
+            </li>
+        </ul>
+
+        <h2>Projetos</h2>
+        <ul class="lista">
+            <li><strong><a href="https://semtec.netlify.app/">semtec</a></strong> &mdash; API e projeto de pesquisa sobre relações semânticas entre termos técnicos</li>
+            <li><strong><a href="http://sentora.bri.ifsp.edu.br/~bi3017371/projetoMLW/">JavaScript</a></strong> &mdash; Projeto apresentado para conclusão da disciplina de Marcação e Layout para Web</li>
+            <li><strong><a href="https://codatex.netlify.app/">codaTeX</a></strong> &mdash; Modelo LaTeX para criar documentos de referência, estudo e pesquisa em programação</li>
+        </ul>
+
+        <h2>Idiomas</h2>
+        <ul class="lista">
+            <li><strong>Inglês:</strong> Fluente &mdash; Certificação TOEIC Gold</li>
+        </ul>
+
+        <h2>Links</h2>
+        <ul class="lista">
+            <li><a href="https://github.com/jultty">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/jultty">LinkedIn</a></li>
+            <li><a href="mailto:juno@newen.me">Email</a></li>
+            <li><a href="http://lattes.cnpq.br/0992931976600432">Lattes</a></li>
+            <li><a href="assets/pdf/junoTakano-julho2022-ptBR.pdf">Baixar PDF</a></li>
+
+        </ul>
     
-    <button id="nav-botao"><span class="fa fa-bars" aria-hidden="true" alt="Menu"></span></button>
+    </main>
+
+    <button id="nav-botao" class="nav-botao-fundo"><span class="fa fa-bars" aria-hidden="true" alt="Menu"></span></button>
+
     <nav id="nav-menu">
-    <ul>
-        <li><a href="https://github.com/jultty">GitHub</a></li>
-        <li><a href="https://newen.me/jlt/curriculo.html">Currículo</a></li>
-        <li><a href="https://www.linkedin.com/in/jultty">LinkedIn</a></li>
-    </ul>
+        <ul>
+            <li><a href="https://github.com/jultty/jultty.github.io">Repositório</a></li>
+            <li>jultty &bullet; 2022</li>
+            <li><a href="mailto:juno@newen.me">Contato</a></li>
+        </ul>
     </nav>
+
+</body>
 </html>
