--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/fira-code.min.css"> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/jetbrains-mono.min.css"> 
     <script type="text/javascript" src="assets/js/menu.js" defer></script>
-    <title>jultty</title>
+    <title>Juno Takano</title>
 </head>
 <body>
 
