--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <ul class="lista">
             <li><a href="https://github.com/jultty">GitHub</a></li>
             <li><a href="https://www.linkedin.com/in/jultty">LinkedIn</a></li>
+            <li><a href="https://profile.codersrank.io/user/jultty/">CodersRank</a></li>
             <li><a href="mailto:juno@newen.me">Email</a></li>
             <li><a href="http://lattes.cnpq.br/0992931976600432">Lattes</a></li>
             <li><a href="assets/pdf/junoTakano-julho2022-ptBR.pdf">Baixar PDF</a></li>
