Atualiza áreas de interesse e projetos

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
         <h2>Áreas de interesse</h2>
         <ul class="lista">
+            <li>Análise de dados</li>
             <li>Desenvolvimento back-end</li>
             <li>Localização e documentação de software</li>
-            <li>Suporte técnico bilíngue</li>
         </ul>
 
         <h2>Formação</h2>
@@ -64,7 +64,7 @@
         <h2>Projetos</h2>
         <ul class="lista">
             <li><strong><a href="https://semtec.netlify.app/">semtec</a></strong> &mdash; API e projeto de pesquisa sobre relações semânticas entre termos técnicos</li>
-            <li><strong><a href="http://sentora.bri.ifsp.edu.br/~bi3017371/projetoMLW/">JavaScript</a></strong> &mdash; Projeto apresentado para conclusão da disciplina de Marcação e Layout para Web</li>
+            <li><strong><a href="https://semtec.netlify.app/">semtec-ext</a></strong> &mdash; Consome os termos da semtec API e busca correspondências em uma página web</li>
             <li><strong><a href="https://codatex.netlify.app/">codaTeX</a></strong> &mdash; Modelo LaTeX para criar documentos de referência, estudo e pesquisa em programação</li>
         </ul>
 
