Ajustes e atualização do PDF

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
         <br/>
         <ul class="lista">
             <li><strong>2021</strong> &mdash; Alura, <a href="https://cursos.alura.com.br/user/juffff/fullCertificate/182f3f848779757ab880eb235a624162">Formação Iniciante em Programação</a></li>
-            <li><strong>2021</strong> &mdash; DIO, <a href="https://www.dio.me/certificate/D3331470/share">Bootcamp Amdocs JAVA Developer</a>
-            <li><strong>2022</strong> &mdash; DIO, <a href="https://www.dio.me/certificate/79EA21CB/share">Bootcamp Avanade Decola Tech 3&ordf; Edição</a>
+            <li><strong>2021</strong> &mdash; DIO, <a href="https://www.dio.me/certificate/D3331470/share">Bootcamp Amdocs JAVA Developer</a></li>
+            <li><strong>2022</strong> &mdash; DIO, <a href="https://www.dio.me/certificate/79EA21CB/share">Bootcamp Avanade Decola Tech 3&ordf; Edição</a></li>
         </ul>
 
         <h2>Experiência profissional</h2>
         <ul class="lista">
-            <li><strong>2012 &mdash; 2012</strong> Nossa Saúde Planos de Saúde
+            <li><strong>2019 &mdash; presente</strong> NEWEN Linguagens & Tecnologia 
                 <ul>
-                    <li><strong>Digitadora:</strong> Inserção e validação de dados</li>
+                    <li><strong>Tradutora:</strong> Tradução, transcrição e legendagem</li>
                 </ul>
             </li>
             <br>
@@ -54,9 +54,9 @@
                 </ul>
             </li>
             <br>
-            <li><strong>2019 &mdash; presente</strong> NEWEN Linguagens & Tecnologia 
+            <li><strong>2012 &mdash; 2012</strong> Nossa Saúde Planos de Saúde
                 <ul>
-                    <li><strong>Tradutora:</strong> Tradução, transcrição e legendagem</li>
+                    <li><strong>Digitadora:</strong> Inserção e validação de dados</li>
                 </ul>
             </li>
         </ul>
@@ -80,7 +80,7 @@
             <li><a href="https://profile.codersrank.io/user/jultty/">CodersRank</a></li>
             <li><a href="mailto:juno@newen.me">Email</a></li>
             <li><a href="http://lattes.cnpq.br/0992931976600432">Lattes</a></li>
-            <li><a href="assets/pdf/junoTakano-julho2022-ptBR.pdf">Baixar PDF</a></li>
+            <li><a href="assets/pdf/junoTakano-agosto2022-ptBR.pdf">Baixar PDF</a></li>
 
         </ul>
     
