--- a/index.html
+++ b/index.html
@@ -34,10 +34,17 @@
             </li>
         </ul>
         <br/>
+        <h3>Cursos</h3>
         <ul class="lista">
-            <li><strong>2021</strong> &mdash; Alura, <a href="https://cursos.alura.com.br/user/juffff/fullCertificate/182f3f848779757ab880eb235a624162">Formação Iniciante em Programação</a></li>
-            <li><strong>2021</strong> &mdash; DIO, <a href="https://www.dio.me/certificate/D3331470/share">Bootcamp Amdocs JAVA Developer</a></li>
             <li><strong>2022</strong> &mdash; DIO, <a href="https://www.dio.me/certificate/79EA21CB/share">Bootcamp Avanade Decola Tech 3&ordf; Edição</a></li>
+            <li><strong>2021</strong> &mdash; DIO, <a href="https://www.dio.me/certificate/D3331470/share">Bootcamp Amdocs JAVA Developer</a></li>
+            <li><strong>2021</strong> &mdash; Alura, <a href="https://cursos.alura.com.br/user/juffff/fullCertificate/182f3f848779757ab880eb235a624162">Formação Iniciante em Programação</a></li>
+        </ul>
+        
+        <h3>Palestras e minicursos</h3>
+        <ul class="lista">
+            <li><strong>2022</strong> &mdash; Semana da Informática, IFSP Birigui <a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/1517/?hash=df7a7041369c409c">Microsserviços: como são construídas aplicações
+modernas, resilientes e escaláveis</a></li>
         </ul>
 
         <h2>Experiência profissional</h2>
@@ -63,6 +70,7 @@
 
         <h2>Projetos</h2>
         <ul class="lista">
+            <li><strong><a href="https://github.com/jultty/dataviz">dataviz</a></strong> &mdash; Projetos de visualização de dados</li>
             <li><strong><a href="https://semtec.netlify.app/">semtec</a></strong> &mdash; API e projeto de pesquisa sobre relações semânticas entre termos técnicos</li>
             <li><strong><a href="https://semtec.netlify.app/">semtec-ext</a></strong> &mdash; Consome os termos da semtec API e busca correspondências em uma página web</li>
             <li><strong><a href="https://codatex.netlify.app/">codaTeX</a></strong> &mdash; Modelo LaTeX para criar documentos de referência, estudo e pesquisa em programação</li>
