--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <br/>
         <h3>Cursos</h3>
         <ul class="lista">
+            <li><strong>2022</strong> &mdash; Codecademy, <a href="https://www.codecademy.com/users/jultty/achievements">Fundamentals of Cybersecurity</a></li>
             <li><strong>2022</strong> &mdash; DIO, <a href="https://www.dio.me/certificate/79EA21CB/share">Bootcamp Avanade Decola Tech 3&ordf; Edição</a></li>
             <li><strong>2021</strong> &mdash; DIO, <a href="https://www.dio.me/certificate/D3331470/share">Bootcamp Amdocs JAVA Developer</a></li>
             <li><strong>2021</strong> &mdash; Alura, <a href="https://cursos.alura.com.br/user/juffff/fullCertificate/182f3f848779757ab880eb235a624162">Formação Iniciante em Programação</a></li>
