Atualiza currículo e PDF, altera estrutura

--- a/index.html
+++ b/index.html
@@ -36,33 +36,41 @@
         <br/>
         <h3>Cursos</h3>
         <ul class="lista">
-            <li><strong>2022</strong> &mdash; Codecademy, <a href="https://www.codecademy.com/users/jultty/achievements">Fundamentals of Cybersecurity</a></li>
-            <li><strong>2022</strong> &mdash; DIO, <a href="https://www.dio.me/certificate/79EA21CB/share">Bootcamp Avanade Decola Tech 3&ordf; Edição</a></li>
-            <li><strong>2021</strong> &mdash; DIO, <a href="https://www.dio.me/certificate/D3331470/share">Bootcamp Amdocs JAVA Developer</a></li>
-            <li><strong>2021</strong> &mdash; Alura, <a href="https://cursos.alura.com.br/user/juffff/fullCertificate/182f3f848779757ab880eb235a624162">Formação Iniciante em Programação</a></li>
+            <li>2022</li>
+            <ul>
+                <li><strong>Coursera</strong> &mdash;  <a class="texto-pequeno" href="https://coursera.org/share/025f803df16ad53713774e5520c154fd">Preparar os Dados para Exploração</a></li>
+                <li><strong>Coursera</strong> &mdash; <a class="texto-pequeno" href="https://coursera.org/share/b140cf0127c4b5be01b6f2270dc42628">Fazer perguntas para tomar decisões com base em dados</a></li>
+                <li><strong>Coursera</strong> &mdash; <a class="texto-pequeno" href="https://coursera.org/share/ca517a01f3d6e355cda69e4e534367fe">Fundamentos: dados, dados, em todos os lugares</a></li>
+                <li><strong>Codecademy</strong> &mdash; <a class="texto-pequeno" href="https://www.codecademy.com/users/jultty/achievements">Fundamentals of Cybersecurity</a></li>
+                <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/79EA21CB/share">Bootcamp Avanade Decola Tech 3&ordf; Edição</a></li>
+            </ul>
+            <li>2021</li>
+            <ul>
+                <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/D3331470/share">Bootcamp Amdocs JAVA Developer</a></li>
+                <li><strong>Alura</strong> &mdash; <a class="texto-pequeno" href="https://cursos.alura.com.br/user/juffff/fullCertificate/182f3f848779757ab880eb235a624162">Formação Iniciante em Programação</a></li>
+            </ul>
         </ul>
         
         <h3>Palestras e minicursos</h3>
         <ul class="lista">
-            <li><strong>2022</strong> &mdash; Semana da Informática, IFSP Birigui <a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/1517/?hash=df7a7041369c409c">Microsserviços: como são construídas aplicações
-modernas, resilientes e escaláveis</a></li>
+            <li class="item-espacado"><a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/1517/?hash=df7a7041369c409c">Microsserviços: como são construídas aplicações
+                modernas, resilientes e escaláveis</a><br><strong class="texto-pequeno">IFSP Birigui</strong> &mdash; <span class="texto-pequeno">Semana da Informática</span></li>
+            <li class="item-espacado"><a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/2419/?hash=1aff2c4d9e837b6c">Bibilotecas Nativas do Python na prática</a><br><strong class="texto-pequeno">IFSP Birigui</strong class="texto-pequeno"> &mdash; <span class="texto-pequeno">Semana Nacional de Ciência e Tecnologia</span></li>
         </ul>
 
         <h2>Experiência profissional</h2>
         <ul class="lista">
-            <li><strong>2019 &mdash; presente</strong> NEWEN Linguagens & Tecnologia 
+            <li class="item-espacado"><strong>2019 &mdash; presente</strong> NEWEN Linguagens & Tecnologia 
                 <ul>
                     <li><strong>Tradutora:</strong> Tradução, transcrição e legendagem</li>
                 </ul>
             </li>
-            <br>
-            <li><strong>2014 &mdash; 2017</strong> Cultural Norte Americano
+            <li class="item-espacado"><strong>2014 &mdash; 2017</strong> Cultural Norte Americano
                 <ul>
                     <li><strong>Professora de Inglês:</strong> Preparação e aplicação de aulas, exames e outras atividades pedagógicas</li>
                 </ul>
             </li>
-            <br>
-            <li><strong>2012 &mdash; 2012</strong> Nossa Saúde Planos de Saúde
+            <li class="item-espacado"><strong>2012 &mdash; 2012</strong> Nossa Saúde Planos de Saúde
                 <ul>
                     <li><strong>Digitadora:</strong> Inserção e validação de dados</li>
                 </ul>
@@ -88,7 +96,7 @@ modernas, resilientes e escaláveis</a></li>
             <li><a href="https://profile.codersrank.io/user/jultty/">CodersRank</a></li>
             <li><a href="mailto:juno@newen.me">Email</a></li>
             <li><a href="http://lattes.cnpq.br/0992931976600432">Lattes</a></li>
-            <li><a href="assets/pdf/junoTakano-agosto2022-ptBR.pdf">Baixar PDF</a></li>
+            <li><a href="assets/pdf/junoTakano-novembro2022-ptBR.pdf">Baixar PDF</a></li>
 
         </ul>
     
