Corrige erro no título do certificado

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <ul class="lista">
             <li class="item-espacado"><a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/1517/?hash=df7a7041369c409c">Microsserviços: como são construídas aplicações
                 modernas, resilientes e escaláveis</a><br><strong class="texto-pequeno">IFSP Birigui</strong> &mdash; <span class="texto-pequeno">Semana da Informática</span></li>
-            <li class="item-espacado"><a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/2419/?hash=1aff2c4d9e837b6c">Bibilotecas Nativas do Python na prática</a><br><strong class="texto-pequeno">IFSP Birigui</strong class="texto-pequeno"> &mdash; <span class="texto-pequeno">Semana Nacional de Ciência e Tecnologia</span></li>
+            <li class="item-espacado"><a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/2419/?hash=1aff2c4d9e837b6c">Bibliotecas Nativas do Python na prática</a><br><strong class="texto-pequeno">IFSP Birigui</strong class="texto-pequeno"> &mdash; <span class="texto-pequeno">Semana Nacional de Ciência e Tecnologia</span></li>
         </ul>
 
         <h2>Experiência profissional</h2>
