Adiciona curso: Preparar os Dados para Exploração

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 </ul>
             </li>
         </ul>
-        <br/>
         <h3>Cursos</h3>
         <ul class="lista">
             <li>2022</li>
             <ul>
+                <li><strong>Coursera</strong> &mdash; <a class="texto-pequeno" href="https://coursera.org/share/b570d983e4d12dffa1741bdea8d2a98b">Processar os dados para limpá-los</a></li>
                 <li><strong>Coursera</strong> &mdash;  <a class="texto-pequeno" href="https://coursera.org/share/025f803df16ad53713774e5520c154fd">Preparar os Dados para Exploração</a></li>
                 <li><strong>Coursera</strong> &mdash; <a class="texto-pequeno" href="https://coursera.org/share/b140cf0127c4b5be01b6f2270dc42628">Fazer perguntas para tomar decisões com base em dados</a></li>
                 <li><strong>Coursera</strong> &mdash; <a class="texto-pequeno" href="https://coursera.org/share/ca517a01f3d6e355cda69e4e534367fe">Fundamentos: dados, dados, em todos os lugares</a></li>
