Implementa a troca de idiomas por notificação

--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
 <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
     <link rel="stylesheet" href="assets/css/estilo.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" defer></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/fira-code.min.css"> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/jetbrains-mono.min.css"> 
     <script type="text/javascript" src="assets/js/menu.js" defer></script>
+    <script type="text/javascript" src="assets/js/lang.js" defer=""></script>
     <title>Juno Takano</title>
 </head>
 <body>
+
+    <div id="lang-notification"><p>This page is available in English.</p> <a href="index_en-US.html"><button id="lang-switch">Change language</button></a><button id="lang-dismiss">Dismiss</button></div>
 
     <main class="col">
         <h1 id="2022-04-23">> Juno Takano</h1>
@@ -62,7 +69,7 @@
         <ul class="lista">
             <li class="item-espacado"><strong>2019 &mdash; presente</strong> NEWEN Linguagens & Tecnologia 
                 <ul>
-                    <li><strong>Tradutora:</strong> Tradução, transcrição e legendagem</li>
+                    <li><strong>Tradutora técnica:</strong> Tradução, transcrição e legendagem</li>
                 </ul>
             </li>
             <li class="item-espacado"><strong>2014 &mdash; 2017</strong> Cultural Norte Americano
@@ -108,7 +115,7 @@
         <ul>
             <li><a href="https://github.com/jultty/jultty.github.io">Repositório</a></li>
             <li>jultty &bullet; 2022</li>
-            <li><a href="mailto:juno@newen.me">Contato</a></li>
+            <li><a href="index_en-US.html">English</a></li>
         </ul>
     </nav>
 
