dataviz: Altera link do para a documentação

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <h2>Projetos</h2>
         <ul class="lista">
-            <li><strong><a href="https://github.com/jultty/dataviz">dataviz</a></strong> &mdash; Projetos de visualização de dados</li>
+            <li><strong><a href="https://jultty.github.io/dataviz/">dataviz</a></strong> &mdash; Projetos de visualização de dados</li>
             <li><strong><a href="https://semtec.netlify.app/">semtec</a></strong> &mdash; API e projeto de pesquisa sobre relações semânticas entre termos técnicos</li>
             <li><strong><a href="https://semtec.netlify.app/">semtec-ext</a></strong> &mdash; Consome os termos da semtec API e busca correspondências em uma página web</li>
             <li><strong><a href="https://codatex.netlify.app/">codaTeX</a></strong> &mdash; Modelo LaTeX para criar documentos de referência, estudo e pesquisa em programação</li>
