Adiciona cursos: 5 e 6 da Certificação em AD

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" dir="ltr">
 <head>
 <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,7 +22,7 @@
     <div id="lang-notification"><p>This page is available in English.</p> <a href="index_en-US.html"><button id="lang-switch">Change language</button></a><button id="lang-dismiss">Dismiss</button></div>
 
     <main class="col">
-        <h1 id="2022-04-23">> Juno Takano</h1>
+        <h1 id="2022-04-23">&gt; Juno Takano</h1>
         <p class="tagline">Estudante de análise e desenvolvimento de sistemas</p>
 
         <h2>Áreas de interesse</h2>
@@ -44,10 +44,16 @@
         <ul class="lista">
             <li>2022</li>
             <ul>
-                <li><strong>Coursera</strong> &mdash; <a class="texto-pequeno" href="https://coursera.org/share/b570d983e4d12dffa1741bdea8d2a98b">Processar os dados para limpá-los</a></li>
-                <li><strong>Coursera</strong> &mdash;  <a class="texto-pequeno" href="https://coursera.org/share/025f803df16ad53713774e5520c154fd">Preparar os Dados para Exploração</a></li>
-                <li><strong>Coursera</strong> &mdash; <a class="texto-pequeno" href="https://coursera.org/share/b140cf0127c4b5be01b6f2270dc42628">Fazer perguntas para tomar decisões com base em dados</a></li>
-                <li><strong>Coursera</strong> &mdash; <a class="texto-pequeno" href="https://coursera.org/share/ca517a01f3d6e355cda69e4e534367fe">Fundamentos: dados, dados, em todos os lugares</a></li>
+                <li><strong>Coursera</strong>
+                    <ul>
+                        <li><a class="texto-pequeno" href="https://coursera.org/share/1d744fe7291dca25ead6ea35c229eba2">Compartilhar os dados com a arte da visualização</a></li>
+                        <li><a class="texto-pequeno" href="https://coursera.org/share/92350b44b7553283a7f609a51b0a197b">Analisar os dados para responder às perguntas</a></li>
+                        <li><a class="texto-pequeno" href="https://coursera.org/share/b570d983e4d12dffa1741bdea8d2a98b">Processar os dados para limpá-los</a></li>
+                        <li><a class="texto-pequeno" href="https://coursera.org/share/025f803df16ad53713774e5520c154fd">Preparar os Dados para Exploração</a></li>
+                        <li><a class="texto-pequeno" href="https://coursera.org/share/b140cf0127c4b5be01b6f2270dc42628">Fazer perguntas para tomar decisões com base em dados</a></li>
+                        <li><a class="texto-pequeno" href="https://coursera.org/share/ca517a01f3d6e355cda69e4e534367fe">Fundamentos: dados, dados, em todos os lugares</a>
+                    </ul>
+                </li>
                 <li><strong>Codecademy</strong> &mdash; <a class="texto-pequeno" href="https://www.codecademy.com/users/jultty/achievements">Fundamentals of Cybersecurity</a></li>
                 <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/79EA21CB/share">Bootcamp Avanade Decola Tech 3&ordf; Edição</a></li>
             </ul>
@@ -87,9 +93,9 @@
         <h2>Projetos</h2>
         <ul class="lista">
             <li><strong><a href="https://jultty.github.io/dataviz/">dataviz</a></strong> &mdash; Projetos de visualização de dados</li>
-            <li><strong><a href="https://semtec.netlify.app/">semtec</a></strong> &mdash; API e projeto de pesquisa sobre relações semânticas entre termos técnicos</li>
-            <li><strong><a href="https://semtec.netlify.app/">semtec-ext</a></strong> &mdash; Consome os termos da semtec API e busca correspondências em uma página web</li>
-            <li><strong><a href="https://codatex.netlify.app/">codaTeX</a></strong> &mdash; Modelo LaTeX para criar documentos de referência, estudo e pesquisa em programação</li>
+            <li><strong><a href="https://semtec.netlify.app/">semtec-api</a></strong> &mdash; API e projeto de pesquisa sobre relações semânticas entre termos técnicos</li>
+            <li><strong><a href="https://semtec.netlify.app/extensao.html">semtec-ext</a></strong> &mdash; Consome os termos da semtec API e busca correspondências em uma página web</li>
+            <li><strong><a href="https://github.com/jultty/limpeza-cadg">limpeza-cadg</a></strong> &mdash; Dados limpos para a versão em português do Certificado Profissional de Análise de Dados do Google.</li>
         </ul>
 
         <h2>Idiomas</h2>
@@ -100,10 +106,11 @@
         <h2>Links</h2>
         <ul class="lista">
             <li><a href="https://github.com/jultty">GitHub</a></li>
+            <li><a href="https://linkedin.com/in/jultty">LinkedIn</a></li>
             <li><a href="https://profile.codersrank.io/user/jultty/">CodersRank</a></li>
             <li><a href="mailto:juno@newen.me">Email</a></li>
             <li><a href="http://lattes.cnpq.br/0992931976600432">Lattes</a></li>
-            <li><a href="assets/pdf/junoTakano-novembro2022-ptBR.pdf">Baixar PDF</a></li>
+            <li><a href="assets/pdf/junoTakano-2022_12-ptBR.pdf">Baixar PDF</a></li>
 
         </ul>
     
