--- a/index_en-US.html
+++ b/index_en-US.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US" dir="ltr">
 <head>
-<meta charset="utf-8">
+<meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
@@ -10,10 +10,10 @@
     <link rel="manifest" href="assets/favicon/site.webmanifest">
     <link rel="stylesheet" href="assets/css/estilo.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" defer=""></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" defer></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/fira-code.min.css"> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/jetbrains-mono.min.css"> 
-    <script type="text/javascript" src="assets/js/menu.js" defer=""></script>
+    <script type="text/javascript" src="assets/js/menu.js" defer></script>
     <script type="text/javascript" src="assets/js/lang.js" defer=""></script>
     <title>Juno Takano</title>
 </head>
@@ -42,12 +42,18 @@
         <ul class="lista">
             <li>2022</li>
             <ul>
-                <li><strong>Coursera</strong> — <a class="texto-pequeno" href="https://coursera.org/share/b570d983e4d12dffa1741bdea8d2a98b">Process the data to clean it</a></li>
-                <li><strong>Coursera</strong> — <a class="texto-pequeno" href="https://coursera.org/share/025f803df16ad53713774e5520c154fd">Prepare data for exploration</a></li>
-                <li><strong>Coursera</strong> — <a class="texto-pequeno" href="https://coursera.org/share/b140cf0127c4b5be01b6f2270dc42628">Ask questions to make data-driven decisions</a></li>
-                <li><strong>Coursera</strong> — <a class="texto-pequeno" href="https://coursera.org/share/ca517a01f3d6e355cda69e4e534367fe">Fundamentals: data, data, everywhere</a></li>
-                <li><strong>Codecademy</strong> — <a class="texto-pequeno" href="https://www.codecademy.com/users/jultty/achievements">Fundamentals of Cybersecurity</a></li>
-                <li><strong>DIO</strong> — <a class="texto-pequeno" href="https://www.dio.me/certificate/79EA21CB/share">Avanade Decola Tech Bootcamp 3rd Edition</a></li>
+                <li><strong>Coursera</strong>
+                    <ul>
+                        <li><a class="texto-pequeno" href="https://coursera.org/share/1d744fe7291dca25ead6ea35c229eba2">Share Data Through the Art of Visualization</a></li>
+                        <li><a class="texto-pequeno" href="https://coursera.org/share/92350b44b7553283a7f609a51b0a197b">Analyze Data to Answer Questions</a></li>
+                        <li><a class="texto-pequeno" href="https://coursera.org/share/b570d983e4d12dffa1741bdea8d2a98b">Process Data from Dirty to Clean</a></li>
+                        <li><a class="texto-pequeno" href="https://coursera.org/share/025f803df16ad53713774e5520c154fd">Prepare Data for Exploration</a></li>
+                        <li><a class="texto-pequeno" href="https://coursera.org/share/b140cf0127c4b5be01b6f2270dc42628">Ask Questions to Make Data-Driven Decisions</a></li>
+                        <li><a class="texto-pequeno" href="https://coursera.org/share/ca517a01f3d6e355cda69e4e534367fe">Foundations: Data, Data, Everywhere</a>
+                    </ul>
+                </li>
+                <li><strong>Codecademy</strong> &mdash; <a class="texto-pequeno" href="https://www.codecademy.com/users/jultty/achievements">Fundamentals of Cybersecurity</a></li>
+                <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/79EA21CB/share">Bootcamp Avanade Decola Tech 3&ordf; Edição</a></li>
             </ul>
             <li>2021</li>
             <ul>
@@ -80,7 +86,7 @@
             <li><strong><a href="https://github.com/jultty/dataviz">dataviz</a></strong> - Data visualization projects</li>
             <li><strong><a href="https://semtec.netlify.app/">semtec</a></strong> - API and research project on semantic relations between technical terms</li>
             <li><strong><a href="https://semtec.netlify.app/">semtec-ext</a></strong> - Consumes semtec API Terms and searches for matches on a web page</li>
-            <li><strong><a href="https://codatex.netlify.app/">codaTeX</a></strong> - LaTeX template to create reference, study and research documents in programming</li>
+                        <li><strong><a href="https://github.com/jultty/limpeza-cadg">limpeza-cadg</a></strong> &mdash; Clean data for the Google Data Analytics Professional Certificate's Portuguese version.</li>
         </ul>
 
         <h2>Languages</h2>
@@ -91,10 +97,11 @@
         <h2>Links</h2>
         <ul class="lista">
             <li><a href="https://github.com/jultty">GitHub</a></li>
+            <li><a href="https://linkedin.com/in/jultty">LinkedIn</a></li>
             <li><a href="https://profile.codersrank.io/user/jultty/">CodersRank</a></li>
             <li><a href="mailto:juno@newen.me">Mail</a></li>
             <li><a href="http://lattes.cnpq.br/0992931976600432">Lattes</a></li>
-            <li><a href="assets/pdf/junoTakano-novembro2022-enUS.pdf">Download as PDF</a></li>
+            <li><a href="assets/pdf/junoTakano-2022_12-enUS.pdf">Download as PDF</a></li>
 
         </ul>
     
