Adiciona curso: Análise de dados com programação R

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <ul>
                 <li><strong>Coursera</strong>
                     <ul>
+                        <li><a class="texto-pequeno" href="https://coursera.org/share/89a46e51fb748591a2edde980fda1d61">Análise de dados com programação em R</a></li>
                         <li><a class="texto-pequeno" href="https://coursera.org/share/1d744fe7291dca25ead6ea35c229eba2">Compartilhar os dados com a arte da visualização</a></li>
                         <li><a class="texto-pequeno" href="https://coursera.org/share/92350b44b7553283a7f609a51b0a197b">Analisar os dados para responder às perguntas</a></li>
                         <li><a class="texto-pequeno" href="https://coursera.org/share/b570d983e4d12dffa1741bdea8d2a98b">Processar os dados para limpá-los</a></li>
