--- a/index_en-US.html
+++ b/index_en-US.html
@@ -44,6 +44,7 @@
             <ul>
                 <li><strong>Coursera</strong>
                     <ul>
+                        <li><a class="texto-pequeno" href="https://coursera.org/share/89a46e51fb748591a2edde980fda1d61">Data Analysis with R Programming</a></li>
                         <li><a class="texto-pequeno" href="https://coursera.org/share/1d744fe7291dca25ead6ea35c229eba2">Share Data Through the Art of Visualization</a></li>
                         <li><a class="texto-pequeno" href="https://coursera.org/share/92350b44b7553283a7f609a51b0a197b">Analyze Data to Answer Questions</a></li>
                         <li><a class="texto-pequeno" href="https://coursera.org/share/b570d983e4d12dffa1741bdea8d2a98b">Process Data from Dirty to Clean</a></li>
@@ -53,7 +54,7 @@
                     </ul>
                 </li>
                 <li><strong>Codecademy</strong> &mdash; <a class="texto-pequeno" href="https://www.codecademy.com/users/jultty/achievements">Fundamentals of Cybersecurity</a></li>
-                <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/79EA21CB/share">Bootcamp Avanade Decola Tech 3&ordf; Edição</a></li>
+                <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/79EA21CB/share">Avanade Decola Tech 3&ordf; Edition Bootcamp</a></li>
             </ul>
             <li>2021</li>
             <ul>
