Adiciona certificação: CADG + cert. último curso

--- a/index.html
+++ b/index.html
@@ -40,12 +40,24 @@
                 </ul>
             </li>
         </ul>
+
+        <h3>Certificações</h3>
+        <ul class="lista">
+            <li>
+                <a href="https://coursera.org/verify/professional-cert/YP2CK65FDE5D">Certificado Profissional de Análise de Dados do Google</a>
+                <ul class="lista-hover">
+                    <li><a href="https://www.credly.com/badges/5da029c6-429a-496d-a5d9-f47baf4a4430">Validar no Credly</a> &bullet; <a href="https://mdst-graphs.netlify.app/mdst_graphs.html">Ver estudo de caso</a></li>
+                </ul>
+            </li>
+        </ul>
+        
         <h3>Cursos</h3>
         <ul class="lista">
             <li>2022</li>
             <ul>
                 <li><strong>Coursera</strong>
                     <ul>
+                        <li><a class="texto-pequeno" href="https://coursera.org/share/5342921febd336bf07db77305fb0f943">Projeto final de Análise de Dados: Estudo de caso</a></li>
                         <li><a class="texto-pequeno" href="https://coursera.org/share/89a46e51fb748591a2edde980fda1d61">Análise de dados com programação em R</a></li>
                         <li><a class="texto-pequeno" href="https://coursera.org/share/1d744fe7291dca25ead6ea35c229eba2">Compartilhar os dados com a arte da visualização</a></li>
                         <li><a class="texto-pequeno" href="https://coursera.org/share/92350b44b7553283a7f609a51b0a197b">Analisar os dados para responder às perguntas</a></li>
