--- a/index_en-US.html
+++ b/index_en-US.html
@@ -38,12 +38,24 @@
                     <li>In progress, 2022 &rightarrow; 2024 &#160; <a href="https://bri.ifsp.edu.br/index.php/cursos-superiores/tecnologia-em-sistemas-para-internet">IFSP Birigui</a></li>
                 </ul> </li>
         </ul>
+
+        <h3>Certifications</h3>
+        <ul class="lista">
+            <li>
+                <a href="https://coursera.org/verify/professional-cert/YP2CK65FDE5D">Google Data Analytics Professional Certificate</a>
+                <ul class="lista-hover">
+                    <li><a href="https://www.credly.com/badges/5da029c6-429a-496d-a5d9-f47baf4a4430">Validate on Credly</a> &bullet; <a href="https://mdst-graphs.netlify.app/mdst_graphs.html">See case study</a></li>
+                </ul>
+            </li>
+        </ul>
+
         <h3>Courses</h3>
         <ul class="lista">
             <li>2022</li>
             <ul>
                 <li><strong>Coursera</strong>
                     <ul>
+                        <li><a class="texto-pequeno" href="https://coursera.org/share/5342921febd336bf07db77305fb0f943">Google Data Analytics Capstone: Complete a Case Study</a></li>
                         <li><a class="texto-pequeno" href="https://coursera.org/share/89a46e51fb748591a2edde980fda1d61">Data Analysis with R Programming</a></li>
                         <li><a class="texto-pequeno" href="https://coursera.org/share/1d744fe7291dca25ead6ea35c229eba2">Share Data Through the Art of Visualization</a></li>
                         <li><a class="texto-pequeno" href="https://coursera.org/share/92350b44b7553283a7f609a51b0a197b">Analyze Data to Answer Questions</a></li>
